--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
 	--font-color: #e5e7eb;
-	--background-color: #1d2d3e;
+	--background-color: #212121;
 	--secondary-color: #065f46;
 	--transition-animation: all 0.6s ease;
 }
@@ -15,7 +15,7 @@
 }
 
 html {
-	font-size: 16px;
+	font-size: 20px;
 }
 
 html,
@@ -31,6 +31,9 @@ a {
 	color: inherit;
 	display: inline-block;
 	transition: var(--transition-animation);
+	&:hover {
+		color: var(--secondary-color);
+	}
 }
 
 li {
@@ -41,6 +44,11 @@ main {
 	max-width: 100%;
 	height: 100vh;
 	overflow-y: auto;
+}
+
+footer {
+	height: 3.5rem;
+	margin: 0 auto;
 }
 
 .container {
