--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,12 @@ main {
 	max-width: 100%;
 	height: 100vh;
 	overflow-y: auto;
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+	/* Hide scrollbar for Chrome, Safari and Opera */
+	&::-webkit-scrollbar {
+		display: none;
+	}
 }
 
 footer {
