--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ main {
 	max-width: 100%;
 	height: 100vh;
 	overflow-y: auto;
+	position: relative;
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 	/* Hide scrollbar for Chrome, Safari and Opera */
@@ -102,6 +103,15 @@ article {
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
 	-webkit-line-clamp: 6;
+}
+
+.gallery__gradient {
+	background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, var(--background-color));
+	height: 5rem;
+	max-width: 100%;
+	z-index: 4;
+	position: sticky;
+	bottom: 0px;
 }
 
 .hidden > div {
